--- a/views/about/about.hbs
+++ b/views/about/about.hbs
@@ -93,66 +93,58 @@
        Nutzungskonzept für die pädagogisch-didaktisch sinnvolle Anwendung der Schul-Cloud. Außerdem hat das HPI zusammen mit der <a href="https://www.presse.uni-augsburg.de/unipressedienst/2018/jan-maerz/2018_003/" target="_blank">Universität Augsburg</a> 
        einen MOOC zu dem Thema <a href="https://mooc.house/courses/lernen40-2018" target="_blank">Lernen 4.0 - Möglichkeiten und Grenzen einer Digitalisierung im Bildungsbereich</a> durchgeführt.</p>
     <br/>
+    <h4>Veröffentlichungen</h4>
     <div class="container embed-pdf">
         <div class="row embed-pdf-row">
-            <div class="single-pdf col-xs-6 col-md-4 mee" data-pdf="/vendor/GEI-Broschuere-web.pdf">
+            <div class="single-pdf col-xs-6 col-md-4 mee" data-pdf="/other/pdf/GEI-Broschuere-web.pdf">
                 <a href="#">
                     <div class="single-pdf-wrapper">
+                        <span>Bock, A. (2018).</span>
+                        <br/>
                         <b class="single-pdf-title">Die Schul-Cloud im Unterricht - Fachübergreifende Unterrichtsszenarien
                             und Methoden</b>
                         <br/>
                         <span data-pdf="a">Ergebnisse der bildungswissenschaftlichen Begleitforschung des Georg-Eckert-Instituts</span>
                         <br/>
                         <div class="single-pdf-thumbnail">
-                            <img src="/images/pdf-thumbnail-fachuebergreifende-unterrichtsszenarien-begleitforschung-Georg-Eckert-Institut.jpg" />
+                            <img src="/other/pdf/pdf-thumbnail-Die-Schul-Cloud-im-Unterricht-Fachuebergreifende-Unterrichtsszenarien.jpg" />
                         </div>
                     </div>
                 </a>
             </div>
-            <div class="single-pdf col-xs-6 col-md-4" data-pdf="/vendor/fact-sheet.pdf">
+            <div class="single-pdf col-xs-6 col-md-4" data-pdf="/other/pdf/Schulrechner-wandern-in-die-Cloud-2017.pdf">
                 <a href="#">
                     <div class="single-pdf-wrapper">
-                        <b class="single-pdf-title">Schul-Cloud Fact Sheet</b>
+                        <span>Grella, C., Karn, N., Renz, J., & Meinel, C. (2017).</span>
                         <br/>
-                        <span>Was ist die Schul-Cloud? Was ist die Schul-Cloud nicht?</span>
+                        <b class="single-pdf-title">Schulrechner wandern in die Cloud – Was bedeutet das für die unterschiedlichen Stakeholder?</b>
+                        <br/>
+                        <span data-pdf="a">In: C. Igel et al.(Hrsg.), Bildungsräume, DeLFI 2017 -Die 15. e-Learning Fachtagung Informatik, Lecture Notes in Informatics (LNI) (S. 87 – 98), Bonn: Gesellschaft für Informatik.</span>
                         <br/>
                         <div class="single-pdf-thumbnail">
-                            <img src="/images/pdf-thumbnail-schul-cloud-fact-sheet.jpg" />
+                            <img src="/other/pdf/pdf-thumbnail-Schulrechner-wandern-in-die-Cloud.jpg" />
                         </div>
                     </div>
                 </a>
             </div>
-            <div class="single-pdf col-xs-6 col-md-4" data-pdf="/vendor/GEI-Broschuere-web.pdf">
+            <div class="single-pdf col-xs-6 col-md-4" data-pdf="/other/pdf/Konzept-und-Pilotierung-der-Schul-Cloud-2017.pdf">
                 <a href="#">
                     <div class="single-pdf-wrapper">
-                        <b class="single-pdf-title">Die Schul-Cloud im Unterricht - Fachübergreifende Unterrichtsszenarien
-                            und Methoden</b>
+                        <span>Meinel, C., Renz, J., Grella, C., Karn, N. & Hagedorn, C. (2017).</span>
                         <br/>
-                        <span>Ergebnisse der bildungswissenschaftlichen Begleitforschung des Georg-Eckert-Instituts</span>
+                        <b class="single-pdf-title">Die Cloud für Schulen in Deutschland: Konzept und Pilotierung der Schul-Cloud</b>
+                        <br/>
+                        <span>Technische Berichte Nr. 116. Potsdam: Universitätsverlag</span>
                         <br/>
                         <div class="single-pdf-thumbnail">
-                            <img src="/images/pdf-thumbnail-fachuebergreifende-unterrichtsszenarien-begleitforschung-Georg-Eckert-Institut.jpg" />
+                            <img src="/other/pdf/pdf-thumbnail-Konzept-und-Pilotierung-der-Schul-Cloud-2017.jpg" />
                         </div>
                     </div>
                 </a>
             </div>
         </div> <!-- .row.embed-pdf-row -->
         <div class="row embed-pdf-row">
-            <div class="single-pdf col-xs-6 col-md-4" data-pdf="/vendor/GEI-Broschuere-web.pdf">
-                <a href="#">
-                    <div class="single-pdf-wrapper">
-                        <b class="single-pdf-title">Die Schul-Cloud im Unterricht - Fachübergreifende Unterrichtsszenarien
-                            und Methoden</b>
-                        <br/>
-                        <span data-pdf="a">Ergebnisse der bildungswissenschaftlichen Begleitforschung des Georg-Eckert-Instituts</span>
-                        <br/>
-                        <div class="single-pdf-thumbnail">
-                            <img src="/images/pdf-thumbnail-fachuebergreifende-unterrichtsszenarien-begleitforschung-Georg-Eckert-Institut.jpg" />
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="single-pdf col-xs-6 col-md-4" data-pdf="/vendor/fact-sheet.pdf">
+            <div class="single-pdf col-xs-6 col-md-4" data-pdf="/other/pdf/fact-sheet.pdf">
                 <a href="#">
                     <div class="single-pdf-wrapper">
                         <b class="single-pdf-title">Schul-Cloud Fact Sheet</b>
@@ -160,50 +152,19 @@
                         <span>Was ist die Schul-Cloud? Was ist die Schul-Cloud nicht?</span>
                         <br/>
                         <div class="single-pdf-thumbnail">
-                            <img src="/images/pdf-thumbnail-schul-cloud-fact-sheet.jpg" />
-                        </div>
-                    </div>
-                </a>
-            </div>
-            <div class="single-pdf col-xs-6 col-md-4" data-pdf="/vendor/GEI-Broschuere-web.pdf">
-                <a href="#">
-                    <div class="single-pdf-wrapper">
-                        <b class="single-pdf-title">Die Schul-Cloud im Unterricht - Fachübergreifende Unterrichtsszenarien
-                            und Methoden</b>
-                        <br/>
-                        <span>Ergebnisse der bildungswissenschaftlichen Begleitforschung des Georg-Eckert-Instituts</span>
-                        <br/>
-                        <div class="single-pdf-thumbnail">
-                            <img src="/images/pdf-thumbnail-fachuebergreifende-unterrichtsszenarien-begleitforschung-Georg-Eckert-Institut.jpg" />
+                            <img src="/other/pdf/pdf-thumbnail-schul-cloud-fact-sheet.jpg" />
                         </div>
                     </div>
                 </a>
             </div>
         </div> <!-- .row.embed-pdf-row -->
-    </div>
+    </div> <!-- .container.embed-pdf -->
     <br/>
-    <h4>Veröffentlichungen</h4>
-    <p><b>2017</b></p>
+    <h5>Weitere Veröffentlichungen</h5>
     <ul>
-        <li>Meinel, C., Renz, J., Grella, C., Karn, N. & Hagedorn, C. (2017). <a
-                href="https://publishup.uni-potsdam.de/opus4-ubp/frontdoor/deliver/index/docId/10385/file/tbhpi116.pdf"
-                title="Initiates file download" target="_blank">Die Cloud für Schulen in Deutschland: Konzept und
-            Pilotierung der Schul-Cloud.</a> Technische Berichte Nr. 116. Potsdam: Universitätsverlag
-        </li>
         <br/>
-        <li>Malyska, V. & Meinel, C. (2017). Lernen in Wolken. didacta DIGITAL, 1/18, S. 16–17</li>
+        <li>2017: Malyska, V. & Meinel, C. (2017). Lernen in Wolken. didacta DIGITAL, 1/18, S. 16–17</li>
         <br/>
-        <li>Grella, C., Karn, N., Renz, J., & Meinel, C. (2017). <a
-                href="https://dl.gi.de/bitstream/handle/20.500.12116/4881/B7%20Schulrechner%20wandern%20in%20die%20Cloud.pdf?sequence=1&isAllowed=y"
-                title="Initiates file download" target="_blank">Schulrechner wandern in die Cloud – Was bedeutet das für
-            die unterschiedlichen Stakeholder?</a> In: C. Igel et al.(Hrsg.), Bildungsräume, DeLFI 2017 -Die 15.
-            e-Learning Fachtagung Informatik, Lecture Notes in Informatics (LNI) (S. 87 – 98), Bonn: Gesellschaft für
-            Informatik.
-        </li>
-    </ul>
-    <br/>
-    <p><b>2018</b></p>
-    <ul>
         <li>Malyska, V., Renz, J. & Meinel, C. (2018). Eine Innovation für Deutschlands Bildungslandschaft – Projekt
             Schul-Cloud . In Scheiter, K. & Riecke-Baulecke, T. (Hrsg.), Schulmanagement-Handbuch 165: Schule 4.0 (Vol.
             37, S. 75–83). München: Oldenbourg.
