Add translation of verbs and little changes

--- a/views/courses/components/lrs-activitylog.hbs
+++ b/views/courses/components/lrs-activitylog.hbs
@@ -1,6 +1,5 @@
 <div class="list-group list-group-flush">
     <h5>Aktivitätenlog</h5>
-    <!-- TODO: Limit number of statements -->
     {{#each statements}}
         <div class="list-group-item">
             {{#if actor.account.displayName}}
@@ -8,7 +7,11 @@
             {{else}}
                 Unbekannt
             {{/if}}
-            {{verb.display.en-US}}
+            {{#if verb.display.de-DE}}
+                {{verb.display.de-DE}}
+            {{else}}
+                {{verb.display.en-US}}
+            {{/if}}
             <a href="{{object.id}}">{{object.definition.name.de}}</a>
             {{#if object.definition.description.de}}
                 ({{object.definition.description.de}})
