--- a/static/styles/about/about.scss
+++ b/static/styles/about/about.scss
@@ -37,10 +37,6 @@ h5 {
   div.row {
     margin-bottom: 10px;
   }
-
-  .single-pdf:hover {
-
-  }
   .single-pdf:first-child {
     border: 1px solid #d3d3d3;
   }
@@ -58,18 +54,9 @@ h5 {
       .single-pdf-wrapper {
         padding: 10px;
       }
-      .single-pdf-title {
-
-      }
       .single-pdf-thumbnail {
         margin-top: 10px;
-
-        span {
-          position: absolute;
-          top: 50%;
-          left: 50%;
-          transform: translate(-50%, -50%);
-        }
+        width: 100%;
       }
     }
   }
