--- a/views/about/about.hbs
+++ b/views/about/about.hbs
@@ -93,67 +93,39 @@
        Nutzungskonzept für die pädagogisch-didaktisch sinnvolle Anwendung der Schul-Cloud. Außerdem hat das HPI zusammen mit der <a href="https://www.presse.uni-augsburg.de/unipressedienst/2018/jan-maerz/2018_003/" target="_blank">Universität Augsburg</a> 
        einen MOOC zu dem Thema <a href="https://mooc.house/courses/lernen40-2018" target="_blank">Lernen 4.0 - Möglichkeiten und Grenzen einer Digitalisierung im Bildungsbereich</a> durchgeführt.</p>
     <br/>
-    <h4>Veröffentlichungen</h4>
     <div class="container embed-pdf">
         <div class="row embed-pdf-row">
             <div class="single-pdf col-xs-6 col-md-4 mee" data-pdf="/other/pdf/GEI-Broschuere-web.pdf">
                 <a href="#">
                     <div class="single-pdf-wrapper">
-                        <span>Bock, A. (2018).</span>
-                        <br/>
                         <b class="single-pdf-title">Die Schul-Cloud im Unterricht - Fachübergreifende Unterrichtsszenarien
                             und Methoden</b>
                         <br/>
-                        <span data-pdf="a">Ergebnisse der bildungswissenschaftlichen Begleitforschung des Georg-Eckert-Instituts</span>
-                        <br/>
-                        <div class="single-pdf-thumbnail">
-                            <img src="/other/pdf/pdf-thumbnail-Die-Schul-Cloud-im-Unterricht-Fachuebergreifende-Unterrichtsszenarien.jpg" />
-                        </div>
+                        <img class="single-pdf-thumbnail" src="/other/pdf/pdf-thumbnail-Die-Schul-Cloud-im-Unterricht-Fachuebergreifende-Unterrichtsszenarien.jpg" />
                     </div>
                 </a>
             </div>
+        </div> <!-- .row.embed-pdf-row -->
+    </div> <!-- .container.embed-pdf -->
+    <br/>
+    <h4>Veröffentlichungen</h4>
+    <div class="container embed-pdf">
+        <div class="row embed-pdf-row">
             <div class="single-pdf col-xs-6 col-md-4" data-pdf="/other/pdf/Schulrechner-wandern-in-die-Cloud-2017.pdf">
                 <a href="#">
                     <div class="single-pdf-wrapper">
-                        <span>Grella, C., Karn, N., Renz, J., & Meinel, C. (2017).</span>
-                        <br/>
                         <b class="single-pdf-title">Schulrechner wandern in die Cloud – Was bedeutet das für die unterschiedlichen Stakeholder?</b>
                         <br/>
-                        <span data-pdf="a">In: C. Igel et al.(Hrsg.), Bildungsräume, DeLFI 2017 -Die 15. e-Learning Fachtagung Informatik, Lecture Notes in Informatics (LNI) (S. 87 – 98), Bonn: Gesellschaft für Informatik.</span>
-                        <br/>
-                        <div class="single-pdf-thumbnail">
-                            <img src="/other/pdf/pdf-thumbnail-Schulrechner-wandern-in-die-Cloud.jpg" />
-                        </div>
+                        <img class="single-pdf-thumbnail" src="/other/pdf/pdf-thumbnail-Schulrechner-wandern-in-die-Cloud.jpg" />
                     </div>
                 </a>
             </div>
             <div class="single-pdf col-xs-6 col-md-4" data-pdf="/other/pdf/Konzept-und-Pilotierung-der-Schul-Cloud-2017.pdf">
                 <a href="#">
                     <div class="single-pdf-wrapper">
-                        <span>Meinel, C., Renz, J., Grella, C., Karn, N. & Hagedorn, C. (2017).</span>
-                        <br/>
                         <b class="single-pdf-title">Die Cloud für Schulen in Deutschland: Konzept und Pilotierung der Schul-Cloud</b>
                         <br/>
-                        <span>Technische Berichte Nr. 116. Potsdam: Universitätsverlag</span>
-                        <br/>
-                        <div class="single-pdf-thumbnail">
-                            <img src="/other/pdf/pdf-thumbnail-Konzept-und-Pilotierung-der-Schul-Cloud-2017.jpg" />
-                        </div>
-                    </div>
-                </a>
-            </div>
-        </div> <!-- .row.embed-pdf-row -->
-        <div class="row embed-pdf-row">
-            <div class="single-pdf col-xs-6 col-md-4" data-pdf="/other/pdf/fact-sheet.pdf">
-                <a href="#">
-                    <div class="single-pdf-wrapper">
-                        <b class="single-pdf-title">Schul-Cloud Fact Sheet</b>
-                        <br/>
-                        <span>Was ist die Schul-Cloud? Was ist die Schul-Cloud nicht?</span>
-                        <br/>
-                        <div class="single-pdf-thumbnail">
-                            <img src="/other/pdf/pdf-thumbnail-schul-cloud-fact-sheet.jpg" />
-                        </div>
+                        <img class="single-pdf-thumbnail" src="/other/pdf/pdf-thumbnail-Konzept-und-Pilotierung-der-Schul-Cloud-2017.jpg" />
                     </div>
                 </a>
             </div>
