little helpdesk fixes
some little requested helpdesk fixes

--- a/static/styles/help/help.scss
+++ b/static/styles/help/help.scss
@@ -56,6 +56,9 @@
       padding-top: 50px;
       padding-bottom: 40px
     }
+    .mooc-house {
+      margin: 80px 0 25px 0;
+    }
   }
 
   padding-bottom: 20px;
