--- a/views/help/help.hbs
+++ b/views/help/help.hbs
@@ -100,23 +100,23 @@
                                 </div>
                             </div>
                             <div class="card-footer" style="position: absolute; bottom: 0px; width: 100%;">
-                                <a href="/vendor/fact-sheet.pdf" target="_blank" class="btn btn-primary submit-problem">Problem melden</a>
+                                <a href="#" target="_blank" class="btn btn-primary submit-problem">Problem melden</a>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-6 col-sm-6 col-xs-12">
                         <div class="card h-100">
                             <div class="img-out">
-                                <img class="card-img-top circular" src="https://hpi.de/fileadmin/user_upload/hpi/bilder/teaser_news/2013/open_hpi_logo_400x300__08.jpg" alt="Card image cap">
+                                <img class="mooc-house card-img-top circular" src="/images/logo-mooc-house.png" alt="MOOC House Schul-Cloud Kurs">
                             </div>
                             <div class="card-block">
                                 <div class="card-text">
                                     <h4 class="card-title">Schul-Cloud MOOC</h4>
-                                    <p class="card-text">Um Sie bei Ihren ersten Klicks in der Schul-Cloud zu begleiten, haben wir einen MOOC-Kurs zusammengestellt und auf der etablierten Bildungsplattform openHPI für Sie als ausgewählte Pilotschulen bereitgestellt. Er soll Sie durch die Schul-Cloud lotsen und Sie bei der Testung der Schul-Cloud mit verschiedenen Videosequenzen unterstützen.</p>
+                                    <p class="card-text">Um Sie bei Ihren ersten Klicks in der Schul-Cloud zu begleiten, haben wir diesen Kurs zusammengestellt und auf der etablierten Bildungsplattform mooc.house für Sie bereitgestellt. Er soll Sie durch die Schul-Cloud lotsen und Sie bei der Testung der Schul-Cloud anhand einzelner Kursabschnitte unterstützen.</p>
                                 </div>
                             </div>
                             <div class="card-footer" style="position: absolute; bottom: 0px; width: 100%;">
-                                <a href="https://open.hpi.de/courses/schulcloud2017" target="_blank" class="btn btn-primary">Zum openHPI Kurs</a>
+                                <a href="https://mooc.house/courses/schulcloud2018" target="_blank" class="btn btn-primary">Zum openHPI Kurs</a>
                             </div>
                         </div>
                     </div>
