new share button, button icons
new share topic button in course overview and share icons added

--- a/static/styles/files/files.scss
+++ b/static/styles/files/files.scss
@@ -134,6 +134,11 @@
         color: $primaryColor;
       }
     }
+    .card-block {
+      a:hover {
+        text-decoration: none;
+      }
+    }
     .title {
       position: absolute;
       white-space: nowrap;
