--- a/views/topic/topic.hbs
+++ b/views/topic/topic.hbs
@@ -79,7 +79,10 @@
                             <a href="#"
                             data-href="{{../_id}}"
                             data-courseId="{{../courseId}}"
-                            class="btn btn-add btn-secondary btn-create-share">Thema mit anderen Lehrern teilen</a>
+                            class="btn btn-add btn-secondary btn-create-share">
+                                <i class="fa fa-share-alt"></i>
+                                Thema mit anderen Lehrern teilen
+                            </a>
                         </div>
                     </div>
                 {{/userHasPermission}}
