second poll and preferences

--- a/views/lib/forms/form-poll.hbs
+++ b/views/lib/forms/form-poll.hbs
@@ -1,8 +1,8 @@
 <div class="form-group">
     <div class="poll">
         <div>
-            <p>Im Rahmen der Pilotphase I im Projekt Schul-Cloud möchten wir Sie bitten, an unserer circa 30-minütigen Online-Befragung teilzunehmen. Mit Hilfe dieser sollen Erwartungshaltungen und Erfolgsfaktoren gegenüber digitaler Medien in Schule und Unterricht allgemein und gegenüber der Schul-Cloud geprüft werden.</p>
-            <p>Vielen Dank für Ihre Mitarbeit!</p>
+            <p>Die nächste Befragung zum Projekt Schul-Cloud ist online. Gerne möchten wir Sie erneut um Ihre Mitarbeit bitten! Die Bearbeitung wird ca. 20 - 25 Minuten Ihrer Zeit in Anspruch nehmen.</p>
+            <p>Vielen Dank für Ihre Unterstützung!</p>
         </div>
     </div>
     <div style="text-align: center; padding-top: 8px;">
