--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -244,6 +244,8 @@
                     </div>
                 </section>
 
+                <p id="preferences" hidden>{{ json currentUser.preferences }}</p>
+
                 <main id="main-content" class="container-fluid">
                     {{#block "page"}}{{/block}}
                 </main>
