add overflow to container

--- a/static/styles/lib/base.scss
+++ b/static/styles/lib/base.scss
@@ -90,6 +90,12 @@ label,
 	}
 }
 
+header .navbar-nav{
+	overflow-y: auto;
+	white-space: nowrap;
+	-webkit-overflow-scrolling: touch;
+}
+
 footer.small-footer {
 	width: 100%;
 	margin-top: 40px;
