--- a/views/lib/header.hbs
+++ b/views/lib/header.hbs
@@ -4,13 +4,13 @@
             <a id="title" class="pull-left" href="/">
                 <div class="cloud-logo"></div>{{themeTitle}}</a>
             <ul class="nav navbar-nav pull-right">
-                <li class="nav-item hidden-sm-down">
+                <li class="nav-item">
                     <a class="nav-link" href="/team">Team</a>
                 </li>
-                <li class="nav-item hidden-sm-down">
+                <li class="nav-item">
                     <a class="nav-link" href="/partner">Partner</a>
                 </li>
-                <li class="nav-item hidden-sm-down">
+                <li class="nav-item">
                                     <a class="nav-link" href="/about">Über das Projekt</a>
                                 </li>
                 <li class="nav-item">
@@ -22,7 +22,7 @@
                 <li class="nav-item">
                     <a class="nav-link" href="https://blog.schul-cloud.org/faq" target="_blank">FAQ</a>
                 </li>
-                <li class="nav-item intro-trigger hidden-sm-down">
+                <li class="nav-item intro-trigger">
                     <a class="nav-link" href="#" onclick="startIntro()">Intro</a>
                 </li>
             </ul>
