added pdf, moved static stuff
pdf images -> static/images
pdfs -> static/other
fixed gulp task

--- a/static/styles/about/about.scss
+++ b/static/styles/about/about.scss
@@ -63,6 +63,7 @@ h5 {
 
       .single-pdf-wrapper {
         padding: 10px;
+        height: 100%;
       }
       .single-pdf-thumbnail {
         margin-top: 10px;
