--- a/views/about/about.hbs
+++ b/views/about/about.hbs
@@ -95,13 +95,22 @@
     <br/>
     <div class="container embed-pdf">
         <div class="row embed-pdf-row">
-            <div class="single-pdf col-xs-6 col-md-4 mee" data-pdf="/other/pdf/GEI-Broschuere-web.pdf">
+            <div class="single-pdf col-xs-6 col-md-4" data-pdf="/other/pdf/GEI-Fachuebergreifende-Unterrichtsszenarien-und-Methoden.pdf">
                 <a href="#">
                     <div class="single-pdf-wrapper">
                         <b class="single-pdf-title">Die Schul-Cloud im Unterricht - Fachübergreifende Unterrichtsszenarien
                             und Methoden</b>
                         <br/>
-                        <img class="single-pdf-thumbnail" src="/other/pdf/pdf-thumbnail-Die-Schul-Cloud-im-Unterricht-Fachuebergreifende-Unterrichtsszenarien.jpg" />
+                        <img class="single-pdf-thumbnail" src="/images/pdf/pdf-thumbnail-Die-Schul-Cloud-im-Unterricht-Fachuebergreifende-Unterrichtsszenarien.jpg" />
+                    </div>
+                </a>
+            </div>
+            <div class="single-pdf col-xs-6 col-md-4" data-pdf="/other/pdf/Schul-Cloud-in-Unterricht-und-Schulalltag.pdf">
+                <a href="#">
+                    <div class="single-pdf-wrapper">
+                        <b class="single-pdf-title">Die Schul-Cloud in Unterricht und Schulalltag - Mehrwert und Voraussetzungen</b>
+                        <br/>
+                        <img class="single-pdf-thumbnail" src="/images/pdf/pdf-thumbnail-Schul-Cloud-in-Unterricht-und-Schulalltag.jpg" />
                     </div>
                 </a>
             </div>
@@ -116,7 +125,7 @@
                     <div class="single-pdf-wrapper">
                         <b class="single-pdf-title">Schulrechner wandern in die Cloud – Was bedeutet das für die unterschiedlichen Stakeholder?</b>
                         <br/>
-                        <img class="single-pdf-thumbnail" src="/other/pdf/pdf-thumbnail-Schulrechner-wandern-in-die-Cloud.jpg" />
+                        <img class="single-pdf-thumbnail" src="/images/pdf/pdf-thumbnail-Schulrechner-wandern-in-die-Cloud.jpg" />
                     </div>
                 </a>
             </div>
@@ -125,7 +134,7 @@
                     <div class="single-pdf-wrapper">
                         <b class="single-pdf-title">Die Cloud für Schulen in Deutschland: Konzept und Pilotierung der Schul-Cloud</b>
                         <br/>
-                        <img class="single-pdf-thumbnail" src="/other/pdf/pdf-thumbnail-Konzept-und-Pilotierung-der-Schul-Cloud-2017.jpg" />
+                        <img class="single-pdf-thumbnail" src="/images/pdf/pdf-thumbnail-Konzept-und-Pilotierung-der-Schul-Cloud-2017.jpg" />
                     </div>
                 </a>
             </div>
