added data security mail

--- a/views/imprint/imprint.hbs
+++ b/views/imprint/imprint.hbs
@@ -104,6 +104,7 @@
     <p>Hasso-Plattner-Institut <br />
         Prof.-Dr.-Helmert-Str. 2-3<br />
         14482 Potsdam<br />
-        Email: <a href="mailto:schul-cloud@hpi.de">schul-cloud@hpi.de</a>
+        Email: <a href="mailto:schul-cloud@hpi.de">schul-cloud@hpi.de</a><br/>
+        Datenschutz: datenschutz@hpi.de
     </p>
 </div>
