--- a/static/styles/about/about.scss
+++ b/static/styles/about/about.scss
@@ -28,3 +28,47 @@
     }
   }
 }
+
+h5 {
+  color: #b10438!important;
+}
+
+.embed-pdf {
+  .viewer {
+    width: 97%;
+    height: 700px;
+    margin-top: 10px;
+  }
+  div.row {
+    margin-bottom: 10px;
+  }
+  .single-pdf {
+    width: 31%;
+    max-width: 31%;
+    margin: 0 10px;
+    padding: 3px 6px 3px 6px;
+    border: 1px solid #d3d3d3;
+    box-shadow: 2px 2px 5px rgba(0,0,0,.1);
+    &:first-child {
+      margin-left: 0;
+    }
+    &:last-child {
+      margin-right: 0;
+    }
+    &.opened {
+      border: 1px solid #b10438;
+    }
+    a {
+      text-decoration: none;
+
+      .single-pdf-wrapper {
+        padding: 10px;
+        height: 100%;
+      }
+      .single-pdf-thumbnail {
+        margin-top: 10px;
+        width: 100%;
+      }
+    }
+  }
+}
