add rename function for files

--- a/views/files/forms/form-name-edit.hbs
+++ b/views/files/forms/form-name-edit.hbs
@@ -2,3 +2,5 @@
     <label>Wählen Sie einen neuen Namen aus:</label>
     <input class="form-control" name="name" type="text" />
 </div>
+
+<input hidden name="path"/>
