add function for renaming folders

--- a/views/files/files-grid.hbs
+++ b/views/files/files-grid.hbs
@@ -13,7 +13,7 @@
                                          style="background-image: url({{this.thumbnail}}); -webkit-background-size: 50px ;background-size: 50px;"></div>
                                 </div>
                                 <a class="title">
-                                    {{this.name}} <i data-file-id={{this._id}} 
+                                    {{this.name}} <i data-file-id="{{this._id}}"
                                     data-file-name="{{this.name}}" 
                                     data-file-path="{{this.path}}"
                                     class="fa fa-edit file-name-edit"></i>
