--- a/views/files/files.hbs
+++ b/views/files/files.hbs
@@ -54,6 +54,16 @@
 								   data-file-key="{{../this.path}}">
 									<i class="fa fa-trash-o pull-right"></i>
 								</a>
+                                
+                                <a href="/directoryModel/{{../this._id}}/update"
+								   target="_blank"
+								   data-method="dir-rename"
+                                   title="Ordner umbenennen"
+                                   data-directory-id="{{../this._id}}"
+								   data-directory-name="{{../this.name}}"
+								   data-directory-path="{{../this.originalPath}}">
+									<i class="fa fa-edit pull-right"></i>
+								</a>
                                 {{/userHasPermission}}
 							</div>
 						</div>
