--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -22,7 +22,6 @@
 
         <script type="text/javascript">
         window.addEventListener('DOMContentLoaded', function() {
-            $('.sidebar-list').css({"height": window.innerHeight});
             if (!/^((?!chrome).)*safari/i.test(navigator.userAgent)) {
                 setupFirebasePush();
             }
@@ -44,6 +43,14 @@
     {{/content}}
 
     {{#content "body"}}
+        <div class="preload-screen hidden">
+            <div class="content">
+                <div class="center-wrapper">
+                    <i class="fa fa-spinner" aria-hidden="true"></i>
+                    <p>laden...</p>
+                </div>
+            </div>
+        </div>
         <div class="navtooltips"></div>
         <aside class="nav-sidebar hide-inline">
             <nav>
