--- a/views/dashboard/dashboard.hbs
+++ b/views/dashboard/dashboard.hbs
@@ -6,6 +6,7 @@
 
     {{#content "scripts" mode="append"}}
         <script type="text/javascript" src="/scripts/dashboard.js" defer></script>
+        <script src="/scripts/socket.js" type="text/javascript" defer></script>
     {{/content}}
 
     {{#content "page"}}
