use backend_url

--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -255,6 +255,7 @@
                 </section>
 
                 <p id="preferences" hidden>{{ json currentUser.preferences }}</p>
+                <p id="backendUrl" hidden>{{ backendUrl }}</p>
 
                 <main id="main-content" class="container-fluid">
                     {{#block "page"}}{{/block}}
