--- a/views/about/about.hbs
+++ b/views/about/about.hbs
@@ -95,7 +95,7 @@
     <br/>
     <div class="container embed-pdf">
         <div class="row embed-pdf-row">
-            <div class="single-pdf col-xs-6 col-md-4" data-pdf="/other/pdf/GEI-Fachuebergreifende-Unterrichtsszenarien-und-Methoden.pdf">
+            <div class="single-pdf col-xs-12 col-md-3" data-pdf="/other/pdf/GEI-Fachuebergreifende-Unterrichtsszenarien-und-Methoden.pdf">
                 <a href="#">
                     <div class="single-pdf-wrapper">
                         <b class="single-pdf-title">Die Schul-Cloud im Unterricht - Fachübergreifende Unterrichtsszenarien
@@ -105,7 +105,16 @@
                     </div>
                 </a>
             </div>
-            <div class="single-pdf col-xs-6 col-md-4" data-pdf="/other/pdf/Schul-Cloud-in-Unterricht-und-Schulalltag.pdf">
+            <div class="single-pdf col-xs-12 col-md-3" data-pdf="/other/pdf/Schul-Cloud-in-Unterricht-und-Schulalltag.pdf">
+                <a href="#">
+                    <div class="single-pdf-wrapper">
+                        <b class="single-pdf-title">Die Schul-Cloud in Unterricht und Schulalltag - Mehrwert und Voraussetzungen</b>
+                        <br/>
+                        <img class="single-pdf-thumbnail" src="/images/pdf/pdf-thumbnail-Schul-Cloud-in-Unterricht-und-Schulalltag.jpg" />
+                    </div>
+                </a>
+            </div>
+            <div class="single-pdf col-xs-12 col-md-3" data-pdf="/other/pdf/Schul-Cloud-in-Unterricht-und-Schulalltag.pdf">
                 <a href="#">
                     <div class="single-pdf-wrapper">
                         <b class="single-pdf-title">Die Schul-Cloud in Unterricht und Schulalltag - Mehrwert und Voraussetzungen</b>
@@ -120,7 +129,7 @@
     <h4>Veröffentlichungen</h4>
     <div class="container embed-pdf">
         <div class="row embed-pdf-row">
-            <div class="single-pdf col-xs-6 col-md-4" data-pdf="/other/pdf/Schulrechner-wandern-in-die-Cloud-2017.pdf">
+            <div class="single-pdf col-xs-12 col-md-3" data-pdf="/other/pdf/Schulrechner-wandern-in-die-Cloud-2017.pdf">
                 <a href="#">
                     <div class="single-pdf-wrapper">
                         <b class="single-pdf-title">Schulrechner wandern in die Cloud – Was bedeutet das für die unterschiedlichen Stakeholder?</b>
@@ -129,7 +138,7 @@
                     </div>
                 </a>
             </div>
-            <div class="single-pdf col-xs-6 col-md-4" data-pdf="/other/pdf/Konzept-und-Pilotierung-der-Schul-Cloud-2017.pdf">
+            <div class="single-pdf col-xs-12 col-md-3" data-pdf="/other/pdf/Konzept-und-Pilotierung-der-Schul-Cloud-2017.pdf">
                 <a href="#">
                     <div class="single-pdf-wrapper">
                         <b class="single-pdf-title">Die Cloud für Schulen in Deutschland: Konzept und Pilotierung der Schul-Cloud</b>
