--- a/views/help/help.hbs
+++ b/views/help/help.hbs
@@ -139,7 +139,7 @@
             </div>
         </section>
         <section class="changelog" id="changelog">
-            <h4>Neuste Funktionen</h4>
+            <h4>Neueste Funktionen</h4>
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-sm-12">
