--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -231,7 +231,7 @@
                                 </div>
                             </div>
                             {{#unless hideSearch}}
-                                <div class="col-sm-3 hide-inline">
+                                <div id="searchBar" class="col-sm-3 hide-inline">
                                     <form class="search-wrapper" action="{{#if searchLabel}}{{searchAction}}{{else}}/content/{{/if}}" method="get">
                                         <a class="mobile-search-toggle">
                                             <i class="fa fa-search"></i>
