--- a/views/files/files.hbs
+++ b/views/files/files.hbs
@@ -55,7 +55,7 @@
 									<i class="fa fa-trash-o pull-right"></i>
 								</a>
                                 
-                                <a href="/directoryModel/{{../this._id}}/update"
+                                <a href="/directoryModel/{{../this._id}}/rename"
 								   target="_blank"
 								   data-method="dir-rename"
                                    title="Ordner umbenennen"
