--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -230,7 +230,7 @@
                                     {{subtitle}}
                                 </div>
                             </div>
-                            {{#unless hideSearch}}
+                            {{#if showSearch}}
                                 <div id="searchBar" class="col-sm-3 hide-inline">
                                     <form class="search-wrapper" action="{{#if searchLabel}}{{searchAction}}{{else}}/content/{{/if}}" method="get">
                                         <a class="mobile-search-toggle">
@@ -246,7 +246,7 @@
                                         </div>
                                     </form>
                                 </div>
-                            {{/unless}}
+                            {{/if}}
                         </div>
                     </div>
                 </section>
