added data security mail (#701)
* added data security mail

* changed wording to fit DSGVO needs

new text, should meet DSGVO needs

--- a/views/imprint/imprint.hbs
+++ b/views/imprint/imprint.hbs
@@ -99,11 +99,11 @@
         <strong>8. Ihre Rechte</strong>
     </h5>
     <p>Auf Grundlage der DS-GVO haben Sie das Recht auf Auskunft, Berichtigung, Sperrung oder Löschung Ihrer gespeicherten Daten.</p>
-    <p>Auf Anfrage werden wir Sie kostenfrei darüber informieren, ob und wenn ja, welche personenbezogenen Daten über Sie gespeichert wurden.</p>
-    <p>Ihre Anfrage richten bitte Sie per Email oder Post an:</p>
+    <p>Sie haben jederzeit das Recht auf unentgeltliche Auskunft über Ihre gespeicherten personenbezogenen Daten, deren Herkunft und Empfänger und den Zweck der Datenverarbeitung sowie ein Recht auf Berichtigung, Sperrung oder Löschung dieser Daten.</p>
+    <p>Sofern Sie registrierter Nutzer der Schul-Cloud sind, wenden Sie sich bitte an Ihre Schule. Sind sie noch kein Nutzer, richten Sie Ihre Anfrage bitte an unseren Datenschutzbeauftragten per Email oder Post an:</p>
     <p>Hasso-Plattner-Institut <br />
         Prof.-Dr.-Helmert-Str. 2-3<br />
         14482 Potsdam<br />
-        Email: <a href="mailto:schul-cloud@hpi.de">schul-cloud@hpi.de</a>
+        Email: <a href="mailto:datenschutz@schul-cloud.org">datenschutz@schul-cloud.org</a><br/>
     </p>
 </div>
