--- a/views/courses/overview.hbs
+++ b/views/courses/overview.hbs
@@ -44,8 +44,10 @@
 
             {{#embed "lib/components/modal" class="member-modal"}}
                 {{#content "body"}}
-                        <ol id="member-modal-body">
-                        </ol>
+                    <div class="modal-body">
+                        <div id="member-modal-body">
+                        </div>
+                    </div>
                 {{/content}}
             {{/embed}}
 
