--- a/views/lib/sc-card_additionalInfo/memberCount.hbs
+++ b/views/lib/sc-card_additionalInfo/memberCount.hbs
@@ -1,31 +1,37 @@
 {{#if this.memberAmount includeZero=true}}
     <a href="" class="btn-member tooltip-demo" data-name="{{this.title}}" data-html="true" data-toggle="tooltip" data-placement="right"
-       data-title="{{#each (truncateArray this.members 10)}}
-                    {{#if this.displayName}}
-                     {{this.displayName}}
+       data-id="{{this._id}}"
+       data-modal=" {{#if this.members}}
+                        <ol id='member-list'>
+                        {{#each this.members}}
+                        {{#if this.displayName}}
+                          <li>{{this.displayName}}</li>
+                        {{else}}
+                          <li>{{this.firstName}} {{this.lastName}}</li>
+                         {{/if}}
+                        {{/each}}
+                        </ol>
                     {{else}}
-                      {{this.firstName}} {{this.lastName}}
-                    {{/if}}
+                        Noch keine Teilnehmer
+                        {{#userHasPermission "COURSE_EDIT"}}
+                            <div id='course-edit'></div>
+                        {{/userHasPermission}}
+                    {{/if}}"
+       data-title="{{#each (truncateArray this.members 10)}}
+           {{#if this.displayName}}
+               {{this.displayName}}
+           {{else}}
+               {{this.firstName}} {{this.lastName}}
+           {{/if}}
                      </br>
                     {{/each}}
 
-                      {{#ifgt this.memberAmount 10}}
+           {{#ifgt this.memberAmount 10}}
                           <i> {{diff ../this.memberAmount 10}} weiter(e) </i>
                       {{/ifgt}}
-                    {{#if this.members}}
-                    {{else}}
-                        Keine Teilnehmer
-                    {{/if}}"
-        data-modal="{{#each this.members}}
-                      {{#if this.displayName}}
-                        <li>{{this.displayName}}</li>
-                      {{else}}
-                        <li>{{this.firstName}} {{this.lastName}}</li>
-                      {{/if}}
-                    {{/each}}
-                    {{#if this.members}}
-                      {{else}}
-                        Keine Teilnehmer
-                    {{/if}}"">
+           {{#if this.members}}
+           {{else}}
+                        Noch keine Teilnehmer
+                    {{/if}}">
         {{this.memberAmount}} <i class="fa fa-user"></i></a>
 {{/if}}
