--- a/views/lib/loggedin.hbs
+++ b/views/lib/loggedin.hbs
@@ -232,9 +232,9 @@
                             </div>
                             {{#if showSearch}}
                                 <div id="searchBar" class="col-sm-3 hide-inline">
-                                    <form class="search-wrapper" action="{{#if searchLabel}}{{searchAction}}{{else}}/content/{{/if}}" method="get">
+                                    {{#unless liveSearch}}<form class="search-wrapper" action="{{#if searchLabel}}{{searchAction}}{{else}}/content/{{/if}}" method="get">{{/unless}}
                                         <a class="mobile-search-toggle">
-                                            <i class="fa fa-search"></i>
+                                            {{#unless liveSearch}}<i class="fa fa-search"></i>{{/unless}}
                                         </a>
                                         <div class="input-group input-group-sm">
                                             <input type="text" class="{{#if liveSearch}}js-search{{/if}} form-control search-field {{searchClass}}" placeholder="{{#if searchLabel}}{{truncatePure searchLabel 21}}{{else}}Suche nach...{{/if}}" name="q" />
@@ -244,7 +244,7 @@
                                                 </button>
                                             </span>
                                         </div>
-                                    </form>
+                                    {{#unless liveSearch}}</form>{{/unless}}
                                 </div>
                             {{/if}}
                         </div>
