get event size via hidden element

--- a/views/team/team.hbs
+++ b/views/team/team.hbs
@@ -1,4 +1,7 @@
 <section class="section-team">
+    <div id="teamLength" hidden>
+        {{teamLength}}
+    </div>
     {{#each teams as |currentteam childKey|}}
     <h5>{{name}}</h5>
     <div class="container">
